fix: overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,17 +34,17 @@ body {
 
 .lenis.lenis-smooth {
   scroll-behavior: auto !important;
-  overflow: hidden;
+  /* overflow: hidden ; */
 }
 
 .lenis.lenis-smooth [data-lenis-prevent] {
   overscroll-behavior: contain;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
-.lenis.lenis-stopped {
+/* .lenis.lenis-stopped {
   overflow: hidden;
-}
+} */
 
 .notable {
   font-family: var(--font-notable);
@@ -55,7 +55,6 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 330 330' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.7'/%3E%3C/svg%3E");
   background-size: 100vh 100vh;
   mix-blend-mode: overlay;
-  /* try multiply, soft-light, screen */
 }
 
 .custom-outline {
